--- a/index.html
+++ b/index.html
@@ -5,10 +5,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            min-width: 100%;
+            min-height: 100%;
+            background-color: black;
+        }
+
+        .screen-section {
+            width: 200px;
+            height: 100px;
+            background-color: gray;
+            font-size: 1.2rem;
+        }
+    </style>
 </head>
 
 <body>
     <h3>calculator</h3>
+
+    <div class="calculator-body">
+        <!-- calculator screen  -->
+        <section class="screen-section"></section>
+
+        <!-- calculator button section  -->
+        <section class="btn-section">
+            <!-- operator section  -->
+            <section class="operator-section">
+                <button class="operator-btn add-btn">+</button>
+                <button class="oprator-btn sub-btn">-</button>
+                <button class="oprator-btn mod-btn">%</button>
+                <button class="oprator-btn mul-btn">*</button>
+                <button class="oprator-btn div-btn">/</button>
+            </section>
+
+
+            <!-- number section  -->
+            <section class="number-section">
+                <button class="number-btn one-btn" data-number="1">1</button>
+                <button class="number-btn two-btn" data-number="2">2</button>
+                <button class="number-btn three-btn" data-number="3">3</button>
+                <button class="number-btn four-btn" data-number="4">4</button>
+                <button class="number-btn five-btn" data-number="5">5</button>
+                <button class="number-btn six-btn" data-number="6">6</button>
+                <button class="number-btn seven-btn" data-number="7">7</button>
+                <button class="number-btn eight-btn" data-number="8">8</button>
+                <button class="number-btn nine-btn" data-number="9">9</button>
+                <button class="number-btn dot-btn" data-number=".">.</button>
+            </section>
+
+            <!-- clear section  -->
+            <section class="clear-section">
+                <button class="clear-btn">C</button>
+            </section>
+
+
+            <!-- equal button section  -->
+            <section class="equalTo-section">
+                <button class="equalTo-btn">=</button>
+            </section>
+        </section>
+    </div>
 </body>
 <script src="./index.js"></script>
 
