--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <button class="number-btn seven-btn" data-number="7">7</button>
                 <button class="number-btn eight-btn" data-number="8">8</button>
                 <button class="number-btn nine-btn" data-number="9">9</button>
+                <button class="number-btn zero-btn" data-number="0">0</button>
                 <button class="number-btn dot-btn" data-number=".">.</button>
             </section>
 
