add data operator in operator-section

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <section class="btn-section">
             <!-- operator section  -->
             <section class="operator-section">
-                <button class="operator-btn add-btn">+</button>
-                <button class="oprator-btn sub-btn">-</button>
-                <button class="oprator-btn mod-btn">%</button>
-                <button class="oprator-btn mul-btn">*</button>
-                <button class="oprator-btn div-btn">/</button>
+                <button class="operator-btn add-btn" data-operator="+">+</button>
+                <button class="oprator-btn sub-btn" data-operator="-">-</button>
+                <button class="oprator-btn mod-btn" data-operator="%">%</button>
+                <button class="oprator-btn mul-btn" data-operator="*">*</button>
+                <button class="oprator-btn div-btn" data-operator="/">/</button>
             </section>
 
 
@@ -68,6 +68,6 @@
         </section>
     </div>
 </body>
-<script src="./index.js"></script>
+<script src="./index2.js"></script>
 
 </html>
