--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
     <div class="calculator-body">
         <!-- calculator screen  -->
-        <section class="screen-section"></section>
+        <section class="screen-section">
+            <h3 class="screen">0</h3>
+        </section>
 
         <!-- calculator button section  -->
         <section class="btn-section">
